--- a/style.css
+++ b/style.css
@@ -56,3 +56,10 @@ h1{
 	text-decoration: line-through;
     color: #b1b1b1;
 }
+
+#spiritList div.spiritBtn{
+	cursor: pointer;
+}
+#spiritList div.spiritBtn:hover{
+	background-color: #dadada;
+}
